--- a/card.html
+++ b/card.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Apresentação</title>
-    
-<link rel="stylesheet" href="./src/css/card.css">
 
+    <link rel="stylesheet" href="./src/css/card.css">
 </head>
 
 <body>
 
     <div class="card">
 
-        <div class="avatar">
-            <span>JS</span>
+        <div id="avatar">
+            <span>RC</span>
         </div>
 
-        <h1 class="usuario">João Silva</h1>
-        <h2 class="profissao">Desenvolvedor Front-End</h2>
-        <p class="descricao">Apaixonado por criar experiências digitais incríveis. Especializado
-            em HTML, CSS e JavaScript com foco em interfaces modernas e responsivas.
+        <h1>Raí</h1>
+        <h3>Desenvolvedor Full-stack</h3>
+
+        
+        <input type="button" value="modo escuro" onclick="modoescuro()">
+        <br>
+
+        <p class="descricao">
+            Apaixonado por criar experiências digitais incríveis. Especializado em HTML,
+            CSS e JavaScript com foco em interfaces modernas e responsivas.
         </p>
 
         <h3>Habilidades</h3>
-        <ul class="listaHabilidades">
+
+        <ul>
             <li>HTML5</li>
             <li>CSS3</li>
             <li>JavaScript</li>
             <li>Flexbox</li>
         </ul>
-
+        <br
         <button>Entre em contato</button>
 
+        <script src="./main.js"></script>
     </div>
 
-
-
 </body>
-
 </html>
